src/objects/SDHC_Distributed_Loan_Component__c.object
<CustomObject>
    <description>Housing Finance - Distributed Loan Components</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Repayment_Date__c</fullName>
        <label>First Repayment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Repayment_Term_Note__c</fullName>
        <label>Repayment Term Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repayment_Terms__c</fullName>
        <label>Repayment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Residual Receipt %</fullName>
                </value>
                <value>
                    <fullName>Residual Receipt Per Note Ex:(50%&gt;10,000&gt;100%)</fullName>
                </value>
                <value>
                    <fullName>Surplus Cash %</fullName>
                </value>
                <value>
                    <fullName>Minimum Payment</fullName>
                </value>
                <value>
                    <fullName>Forgivable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDHC_Loan__c</fullName>
        <label>SDHC Loan</label>
        <referenceTo>SDHC_Loan__c</referenceTo>
        <relationshipLabel>SDHC Distributed Loan Component</relationshipLabel>
        <relationshipName>SDHC_Distributed_Loan_Component</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SDHC Housing Trust Fund</fullName>
                </value>
                <value>
                    <fullName>SD Redevelopment</fullName>
                </value>
                <value>
                    <fullName>Inclusionary</fullName>
                </value>
                <value>
                    <fullName>HOME</fullName>
                </value>
                <value>
                    <fullName>NCFUA</fullName>
                </value>
                <value>
                    <fullName>NSP 50% AMI Funds</fullName>
                </value>
                <value>
                    <fullName>SDHC Forgivable Grant</fullName>
                </value>
                <value>
                    <fullName>SRO in Lieu Fee Funds</fullName>
                </value>
                <value>
                    <fullName>Coastal Housing</fullName>
                </value>
                <value>
                    <fullName>LHTF Matching Fund</fullName>
                </value>
                <value>
                    <fullName>Private - Mercado del Barrio</fullName>
                </value>
                <value>
                    <fullName>Neighborhood Stabil Prg NSP</fullName>
                </value>
                <value>
                    <fullName>CAL State HTF</fullName>
                </value>
                <value>
                    <fullName>Private - FNMA Riverwalk Apts</fullName>
                </value>
                <value>
                    <fullName>HTF</fullName>
                </value>
                <value>
                    <fullName>Redev Agency Trust Fund</fullName>
                </value>
                <value>
                    <fullName>State REO</fullName>
                </value>
                <value>
                    <fullName>Condo Conversion/Density Bonus</fullName>
                </value>
                <value>
                    <fullName>Private - Mission Apts</fullName>
                </value>
                <value>
                    <fullName>Private - Terramar</fullName>
                </value>
                <value>
                    <fullName>Lease Sale</fullName>
                </value>
                <value>
                    <fullName>Private - Neighborhood Stabil Prg NSP</fullName>
                </value>
                <value>
                    <fullName>Bond Program</fullName>
                </value>
                <value>
                    <fullName>HTF - TO Tax</fullName>
                </value>
                <value>
                    <fullName>Private - FNMA Linc-Arbor Village</fullName>
                </value>
                <value>
                    <fullName>Private - Vista Grande</fullName>
                </value>
                <value>
                    <fullName>Private - Churchill General Fund</fullName>
                </value>
                <value>
                    <fullName>Discretionary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SDHC Distributed Loan Component</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>SDHC Distributed Loan Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDHC Distributed Loan Component</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>